<resources>
    <string name="app_name">MQTT KeyPad</string>
    <string name="SavedServerKey">rcr.mqttkeypad.SAVED_SERVER_KEY</string>
    <string name="SavedTopicKey">rcr.mqttkeypad.SAVED_TOPIC_KEY</string>
    <string name="K_POWER">PWR</string>
    <string name="K_0">0</string>
    <string name="K_1">1</string>
    <string name="K_2">2</string>
    <string name="K_3">3</string>
    <string name="K_4">4</string>
    <string name="K_5">5</string>
    <string name="K_6">6</string>
    <string name="K_7">7</string>
    <string name="K_8">8</string>
    <string name="K_9">9</string>
    <string name="K_VOL_UP">VOL+</string>
    <string name="K_VOL_DOWN">VOL-</string>
    <string name="K_CH_UP">CH+</string>
    <string name="K_CH_DOWN">CH-</string>
    <string name="DefaultServer">test.mosquitto.org:1883</string>
    <string name="DefaultTopic">rcr/mqttkeypad</string>
    <string name="Server">MQTT Server:Port</string>
    <string name="Topic">MQTT Topic</string>
    <string name="Connect">Connect</string>
    <string name="Disconnected">Disconnected from MQTT Server</string>
    <string name="Connecting">Connecting to MQTT Server</string>
    <string name="ConnectCompleted">Connect Complete to MQTT Server</string>
    <string name="ConnectSuccess">Succesful connection to MQTT Server</string>
    <string name="Connected">Connected to MQTT Server</string>
    <string name="ConnectionLost">Connection Lost from MQTT Server</string>
    <string name="MessageArrived">Message Arrived</string>
    <string name="DeliveryCompleted">Delivery Completed</string>
    <string name="Published">Message Published</string>
</resources>
