<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnK_Power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/K_POWER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnK_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/K_1"
        app:layout_constraintEnd_toStartOf="@+id/btnK_Power"
        app:layout_constraintTop_toBottomOf="@+id/btnK_Power" />

    <Button
        android:id="@+id/btnK_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_2"
        app:layout_constraintStart_toStartOf="@+id/btnK_Power"
        app:layout_constraintTop_toBottomOf="@+id/btnK_Power" />

    <Button
        android:id="@+id/btnK_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/K_3"
        app:layout_constraintStart_toEndOf="@+id/btnK_Power"
        app:layout_constraintTop_toBottomOf="@+id/btnK_Power" />

    <Button
        android:id="@+id/btnK_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_4"
        app:layout_constraintStart_toStartOf="@+id/btnK_1"
        app:layout_constraintTop_toBottomOf="@+id/btnK_1" />

    <Button
        android:id="@+id/btnK_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_5"
        app:layout_constraintStart_toStartOf="@+id/btnK_2"
        app:layout_constraintTop_toBottomOf="@+id/btnK_2" />

    <Button
        android:id="@+id/btnK_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_6"
        app:layout_constraintStart_toStartOf="@+id/btnK_3"
        app:layout_constraintTop_toBottomOf="@+id/btnK_3" />

    <Button
        android:id="@+id/btnK_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_7"
        app:layout_constraintStart_toStartOf="@+id/btnK_4"
        app:layout_constraintTop_toBottomOf="@+id/btnK_4" />

    <Button
        android:id="@+id/btnK_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_8"
        app:layout_constraintStart_toStartOf="@+id/btnK_5"
        app:layout_constraintTop_toBottomOf="@+id/btnK_5" />

    <Button
        android:id="@+id/btnK_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_9"
        app:layout_constraintStart_toStartOf="@+id/btnK_6"
        app:layout_constraintTop_toBottomOf="@+id/btnK_6" />

    <Button
        android:id="@+id/btnK_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_0"
        app:layout_constraintStart_toStartOf="@+id/btnK_8"
        app:layout_constraintTop_toBottomOf="@+id/btnK_8" />

    <Button
        android:id="@+id/btnK_VOL_UP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_VOL_UP"
        app:layout_constraintStart_toStartOf="@+id/btnK_7"
        app:layout_constraintTop_toBottomOf="@+id/btnK_7" />

    <Button
        android:id="@+id/btnK_CH_UP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_CH_UP"
        app:layout_constraintStart_toStartOf="@+id/btnK_9"
        app:layout_constraintTop_toBottomOf="@+id/btnK_9" />

    <Button
        android:id="@+id/btnK_VOL_DOWN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_VOL_DOWN"
        app:layout_constraintStart_toStartOf="@+id/btnK_VOL_UP"
        app:layout_constraintTop_toBottomOf="@+id/btnK_VOL_UP" />

    <Button
        android:id="@+id/btnK_CH_DOWN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/K_CH_DOWN"
        app:layout_constraintStart_toStartOf="@+id/btnK_CH_UP"
        app:layout_constraintTop_toBottomOf="@+id/btnK_CH_UP" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/btnK_CH_DOWN"
        app:layout_constraintStart_toStartOf="@+id/btnK_VOL_DOWN"
        app:layout_constraintTop_toBottomOf="@+id/btnK_VOL_DOWN" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Server"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/txtServer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/DefaultServer"
        android:ems="10"
        android:hint="@string/DefaultServer"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Topic"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/txtServer"
        app:layout_constraintStart_toStartOf="@+id/txtServer"
        app:layout_constraintTop_toBottomOf="@+id/txtServer" />

    <EditText
        android:id="@+id/txtTopic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/DefaultTopic"
        android:ems="10"
        android:hint="@string/DefaultTopic"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnK_Connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Connect"
        android:minHeight="48dp"
        android:src="@drawable/ic_refresh_black_24dp"
        app:layout_constraintEnd_toEndOf="@+id/txtTopic"
        app:layout_constraintTop_toBottomOf="@+id/txtTopic" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Disconnected"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/txtTopic"
        app:layout_constraintStart_toStartOf="@+id/txtTopic"
        app:layout_constraintTop_toBottomOf="@+id/btnK_Connect" />

</androidx.constraintlayout.widget.ConstraintLayout>